test/zinc_source/compile_errors/structs/05_mixed_composition_operators.zn
// expected-error: found 2 syntax error

struct File {
    path: string
}

struct Message {
    text: string
}

struct Audit {
    created_by: string
}

struct Item [ File | Message, Audit ] {
}

fn main() {
}
